@@ -1,7 +1,9 @@
+* [Bug 1330] disallow interface/nic rules when --novirtualips or
+  --interface are used.
 * Add test of ntpd --saveconfigquit fidelity using new complete.conf.
 (4.2.5p226) 2009/10/04 Released by Harlan Stenn <stenn@ntp.org>
-[Bug 1318] Allow multiple -g options on ntpd command line.
-[Bug 1327] ntpq, ntpdc, ntp-keygen -d and -D should work with configure
+* [Bug 1318] Allow multiple -g options on ntpd command line.
+* [Bug 1327] ntpq, ntpdc, ntp-keygen -d and -D should work with configure
   --disable-debugging.
 * Add ntpd --saveconfigquit <filename> option for future build-time
   testing of saveconfig fidelity.
